Initial commit of existing project

--- a/templates/dashboard/home.html
+++ b/templates/dashboard/home.html
@@ -7,7 +7,7 @@
         <div class="container wrap-jumbotron position-relative">
             <h2 class="title-site">My Dashboard</h2>
             <p class="subtitle-site">
-                <strong>{{ active_campaigns }} Active Campaign{{ active_campaigns|pluralize }}</strong>
+                <strong>Dashboard Overview</strong>
             </p>
         </div>
     </div>
@@ -23,7 +23,7 @@
             <div class="col-md-9">
                 <!-- Stats Cards -->
                 <div class="row margin-bottom-30">
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="panel panel-default text-center">
                             <div class="panel-heading">
                                 <h3 class="panel-title">Total Raised</h3>
@@ -33,17 +33,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="panel panel-default text-center">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">Active Campaigns</h3>
-                            </div>
-                            <div class="panel-body">
-                                <h3>{{ active_campaigns }}</h3>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="panel panel-default text-center">
                             <div class="panel-heading">
                                 <h3 class="panel-title">My Donations Given</h3>
